--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <html>
     <head>
       <meta charset="utf-8">
-      <title>Моя личная страничка</title>
+      <title>Моя личная страница</title>
     </head>
     <body> 
       <left><h1>Елена Ашурова</h1></left>
