--- a/index.html
+++ b/index.html
@@ -2,18 +2,18 @@
   <html>
     <head>
       <meta charset="utf-8">
-      <title>Моя личная страничка</title>
+      <title>My personal page</title>
     </head>
     <body> 
-      <left><h1>Елена Ашурова</h1></left>
-      <left><img alt="Это я" width="15%" src="me.jpg"></left>
+      <left><h1>Elena Ashurova</h1></left>
+      <left><img alt="It's me" width="15%" src="me.jpg"></left>
       <br/>
-      <h2>Контакты:</h2>
-      Страничка <a href=https://vk.com/eashurova2000/>vkontakte</a>
+      <h2>Contacts:</h2>
+      Pages: <a href=https://vk.com/eashurova2000/>vkontakte</a>
       <br/>
       <a href=https://github.com/helenashh>GitHub</a>
       <br/>
-      Телефон: <b>+79143818696</b>
+      Number: <b>+79143818696</b>
       <br/>
       E-mail: <i>evashurova@edu.hse.ru</i>
     </body>
