--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <title>My personal page</title>
     </head>
     <body> 
-      <p>I'm 17 years old. I love HSE and Jared Leto.
+      <p>I'm 17 years old. I love HSE and Jared Leto.</p>
       <left><h1>Elena Ashurova</h1></left>
       <left><img alt="It's me" width="15%" src="me.jpg"></left>
       <br/>
