--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
   <!doctype html>
   <html>
     <head>
+      <style type="text/css">
       <meta charset="utf-8">
       <title>My personal page</title>
+      </style>
     </head>
     <body> 
       <left><h1>Elena Ashurova</h1></left>
