--- a/index.html
+++ b/index.html
@@ -1,10 +1,22 @@
   <!doctype html>
   <html>
-    <head>
+    <head> 
       <style type="text/css">
+      h1 {
+        font-size: 120%; 
+        font-family: Verdana, Arial, Helvetica, sans-serif; 
+        color: #6A5ACD;
+      }
+      p {
+  height: 200px; /* Высота блока */
+    width: 200px; /* Ширина блока */
+    overflow: auto; /* Добавляем полосы прокрутки */
+    padding-left: 15px; /* Отступ от текста слева */
+    background: url(images/hand.png) repeat-y #fc0;
+      }
+      </style>
       <meta charset="utf-8">
       <title>My personal page</title>
-      </style>
     </head>
     <body> 
       <left><h1>Elena Ashurova</h1></left>
