--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
         color: #6A5ACD;
       }
       p {
-  height: 200px; /* Высота блока */
+        font-size: 120%; 
+        font-family: Verdana, Arial, Helvetica, sans-serif; 
+       height: 50px; /* Высота блока */
     width: 200px; /* Ширина блока */
     overflow: auto; /* Добавляем полосы прокрутки */
     padding-left: 15px; /* Отступ от текста слева */
-    background: url(images/hand.png) repeat-y #fc0;
+    background: url(images/hand.png) repeat-y #E6E6FA;
       }
       </style>
       <meta charset="utf-8">
