--- a/index.html
+++ b/index.html
@@ -10,12 +10,8 @@
       p {
         font-size: 120%; 
         font-family: Verdana, Arial, Helvetica, sans-serif; 
-       height: 50px; /* Высота блока */
-    width: 200px; /* Ширина блока */
-    overflow: auto; /* Добавляем полосы прокрутки */
-    padding-left: 15px; /* Отступ от текста слева */
-    background: url(images/hand.png) repeat-y #E6E6FA;
-      }
+        color: #9370DB;
+             }
       </style>
       <meta charset="utf-8">
       <title>My personal page</title>
