--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       p {
         font-size: 120%; 
         font-family: Verdana, Arial, Helvetica, sans-serif; 
-        color: #9370DB;
+        color: #6A5ACD;
              }
       </style>
       <meta charset="utf-8">
