--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head> 
       <style type="text/css">
       h1 {
-        font-size: 120%; 
+        font-size: 150%; 
         font-family: Verdana, Arial, Helvetica, sans-serif; 
         color: #6A5ACD;
       }
@@ -12,6 +12,12 @@
         font-family: Verdana, Arial, Helvetica, sans-serif; 
         color: #6A5ACD;
              }
+      h2 {
+         font-size: 120%;
+         font-family: Verdana, Arial, Helvetica, sans-serif;
+         color: #6A5ACD
+         }
+      
       </style>
       <meta charset="utf-8">
       <title>My personal page</title>
