--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
          font-family: Verdana, Arial, Helvetica, sans-serif;
          color: #6A5ACD
          }
-      
+      .text {
+           text-alig: center;
+}
       </style>
       <meta charset="utf-8">
       <title>My personal page</title>
