--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
       <title>My personal page</title>
     </head>
     <body> 
-      <left><h1>Elena Ashurova</h1></left>
-      <left><img alt="It's me" width="15%" src="me.jpg"></left>
+      <center><h1>Elena Ashurova</h1></left>
+      <center><img alt="It's me" width="15%" src="me.jpg"></left>
       <br/>
       <p>I'm 17 years old. I love HSE and Jared Leto.</p>
       <h2>Contacts:</h2>
