--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
   <html>
     <head> 
       <style type="text/css">
+      body {
+       background:url(images/hand.png) repeat-y, 
+                #fc0 url(images/bg-right.png) repeat-y 100% 0;
+       }
+     
       h1 {
         font-size: 150%; 
         font-family: Verdana, Arial, Helvetica, sans-serif; 
