--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <br/>
       <p>I'm 17 years old. I love HSE and Jared Leto.</p>
       <h2>Contacts:</h2>
-      Pages: <a href=https://vk.com/eashurova2000/>vkontakte</a>
+      Pages: <a href=https://vk.com/eashurova2000>vkontakte</a>
       <br/>
       <a href=https://github.com/helenashh>GitHub</a>
       <br/>
