--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       <style type="text/css">
       body {
        background:url(images/hand.png) repeat-y, 
-                #DDA0DD url(images/bg-right.png) repeat-y 100% 0;
+                #D8BFD8 url(images/bg-right.png) repeat-y 100% 0;
        }
      
       h1 {
