--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
       <br/>
       <a href=https://github.com/helenashh>GitHub</a>
       <br/>
+      <a href=https://www.instagram.com/helen_ashh>Instagram</a>
+      <br/>
       Number: <b>+79143818696</b>
       <br/>
       E-mail: <i>evashurova@edu.hse.ru</i>
